# sonar-passivo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
scripts/: generate_adversarial.py  train.py
src/sonar_passivo/: __init__.py  adversarial.py  config.py  dataset.py  engine.py  model.py  utils.py
