[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar_passivo"
version = "0.1.0"
description = "Passive Sonar Classification using 1D CNNs and Adversarial Training"
authors = [
  { name = "Luís Rafael Sena", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/ifuaslaerl/sonarpassivo"

[tool.setuptools.packages.find]
where = ["src"]
